# mlir-learning

./: .gitignore  CMakeLists.txt  README.md
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.h  PolyOps.td  PolyTypes.h  PolyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnroll2.cpp  AffineFullUnroll2.h  AffineFullUnrollPattern.cpp  AffineFullUnrollPattern.h  CMakeLists.txt
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  MulToAddTG.td
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  multoadd_test.mlir  multoadd_test2.mlir  poly_test.mlir  unroll_test.mlir  unroll_test2.mlir
tools/: CMakeLists.txt  my-opt.cpp
